# Cmake-notes

./: README.md
cmake/helloworld/: CMakeLists.txt
cmake/student/: CMakeLists.txt
cmake/usestudentlib/: CMakeLists.txt
